{
  "version": 4,
  "terraform_version": "1.2.9",
  "serial": 18,
  "lineage": "b83bb095-9258-c50c-2dbd-b843dbd240e1",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-088a58e83bc290d22",
            "association_id": "eipassoc-0fbc81d50d00146ee",
            "domain": "vpc",
            "id": "eipalloc-088a58e83bc290d22",
            "network_border_group": "us-east-1",
            "network_interface": "eni-022abd6fb973ad0c3",
            "private_dns": "ip-10-0-1-173.ec2.internal",
            "private_ip": "10.0.1.173",
            "public_dns": "ec2-52-20-203-56.compute-1.amazonaws.com",
            "public_ip": "52.20.203.56",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main-gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:937757783701:internet-gateway/igw-06f62d64fd7df5e71",
            "id": "igw-06f62d64fd7df5e71",
            "owner_id": "937757783701",
            "tags": {
              "Name": "main"
            },
            "tags_all": {
              "Name": "main"
            },
            "vpc_id": "vpc-0c1be2bc21137be39"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat-gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-088a58e83bc290d22",
            "connectivity_type": "public",
            "id": "nat-04ef2b6751ef602ee",
            "network_interface_id": "eni-022abd6fb973ad0c3",
            "private_ip": "10.0.1.173",
            "public_ip": "52.20.203.56",
            "subnet_id": "subnet-023b6b61e1950e758"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main-gw",
            "aws_subnet.main-public-1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "main-private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:937757783701:route-table/rtb-0c22f2e6bc7839fec",
            "id": "rtb-0c22f2e6bc7839fec",
            "owner_id": "937757783701",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-04ef2b6751ef602ee",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "main-private-1"
            },
            "tags_all": {
              "Name": "main-private-1"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c1be2bc21137be39"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main-gw",
            "aws_nat_gateway.nat-gw",
            "aws_subnet.main-public-1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "main-public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:937757783701:route-table/rtb-04e422c775a78ba52",
            "id": "rtb-04e422c775a78ba52",
            "owner_id": "937757783701",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-06f62d64fd7df5e71",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "main-public-1"
            },
            "tags_all": {
              "Name": "main-public-1"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c1be2bc21137be39"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.main-gw",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "main-private-1-a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-011ccc6f74d114db5",
            "route_table_id": "rtb-0c22f2e6bc7839fec",
            "subnet_id": "subnet-0116d9d4b1bd1ba60"
          },
          "dependencies": [
            "aws_route_table.main-private",
            "aws_subnet.main-private-1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "main-public-1-a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09e4332dbbf780341",
            "route_table_id": "rtb-04e422c775a78ba52",
            "subnet_id": "subnet-023b6b61e1950e758"
          },
          "dependencies": [
            "aws_internet_gateway.main-gw",
            "aws_route_table.main-public",
            "aws_subnet.main-public-1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "main-private-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:937757783701:subnet/subnet-0116d9d4b1bd1ba60",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0116d9d4b1bd1ba60",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "937757783701",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "main-private-1"
            },
            "tags_all": {
              "Name": "main-private-1"
            },
            "vpc_id": "vpc-0c1be2bc21137be39"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "main-public-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:937757783701:subnet/subnet-023b6b61e1950e758",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-023b6b61e1950e758",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "937757783701",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "main-public-1"
            },
            "tags_all": {
              "Name": "main-public-1"
            },
            "vpc_id": "vpc-0c1be2bc21137be39"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:937757783701:vpc/vpc-0c1be2bc21137be39",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0140718fa269d8d0b",
            "default_route_table_id": "rtb-0ffe5a41d9ce967a2",
            "default_security_group_id": "sg-02246375913fed62d",
            "dhcp_options_id": "dopt-0ff2842a74ef9717d",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0c1be2bc21137be39",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0ffe5a41d9ce967a2",
            "owner_id": "937757783701",
            "tags": {
              "Name": "main"
            },
            "tags_all": {
              "Name": "main"
            }
          }
        }
      ]
    }
  ]
}